<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">InventoryApp</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_show_data_base">Show Data Base</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Entries</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="product_details_add_new_product">Add a Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_name">Product Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_supplier_name">Supplier Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_name">Supplier Name</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_supplier_phone">Supplier Phone</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_phone">Supplier Phone</string>


</resources>
