<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ProductDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/name"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/product_name"
            android:textAlignment="gravity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <!-- Name field -->
        <EditText
            android:id="@+id/hint_product_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/hint_product_name"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textCapWords"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/price"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/product_price"
            android:textAlignment="gravity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <!-- Name field -->
        <EditText
            android:id="@+id/hint_product_price"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/hint_product_price"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textCapWords"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/quantity"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/product_quantity"
            android:textAlignment="gravity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <!-- Name field -->
        <EditText
            android:id="@+id/hint_product_quantity"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/hint_product_quantity"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textCapWords"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/supplierName"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/product_supplier_name"
            android:textAlignment="gravity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <!-- Name field -->
        <EditText
            android:id="@+id/hint_product_supplier_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/hint_product_supplier_name"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textCapWords"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:id="@+id/supplierPhone"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:text="@string/product_supplier_phone"
            android:textAlignment="gravity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <!-- Name field -->
        <EditText
            android:id="@+id/hint_product_supplier_phone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/hint_product_supplier_phone"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textCapWords"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>
